syntax = "proto3";

package brpc_log_server;

enum CallstackStatus {
  NOT_STARTED = 0;
  RUNNING = 1;
  SUCCEEDED = 2;
  FAILED = 3;
  CACHED = 4;
}

message CallstackLogNode {
  string id = 1;
  string log_file_path = 2;
  uint64 depth = 3;
  repeated CallstackLogNode children = 4;
  CallstackStatus status = 5;
  string name = 6;
  string error = 7;
}

message RunResult {
  CallstackStatus status = 1;
  repeated CallstackLogNode roots = 2;
  map<string, CallstackLogNode>
  // Roots
  // Index
  // Listeners
}